src/objects/GoogleAnalyticsHitQueue__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GoogleAnalyticsHitSettingsName__c</fullName>
        <label>Google Analytics Hit Settings Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log__c</fullName>
        <label>Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <label>RecordId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RunInBatch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run in Batch</label>
        <type>Checkbox</type>
    </fields>
    <label>Google Analytics Hit Queue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GoogleAnalyticsHitSettingsName__c</columns>
        <columns>Processed__c</columns>
        <columns>Log__c</columns>
        <columns>RecordId__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GAQ-{00000}</displayFormat>
        <label>Google Analytics Hit Queue Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Google Analytics Hits Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>